# us-equities-screener

./: .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile.api  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_extensions.py  0002_companies.py  0003_financial_concepts_facts.py  0004_fundamentals_periodic.py  0005_screener_metrics.py  0006_daily_prices.py
api/: cache.py  compiler.py  config.py  db.py  main.py  models.py  ratelimit.py  schema.py  service.py
api/tests/: test_compiler.py
etl/: __main__.py  bulk.py  cache.py  config.py  db.py  models.py  pipeline.py  sic.py  tickers.py
etl/extract/: edgar.py  prices.py  reference.py
etl/gold/: metrics.py
etl/seed/: concepts.py
etl/silver/: transform.py
etl/tests/: test_currency_and_shares.py  test_gold_guards.py  test_prices.py  test_sic.py  test_silver_guards.py  test_tickers.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  vite-env.d.ts
web/src/components/: CompanySearch.tsx  PriceChart.tsx  QueryBuilder.tsx  ResultsGrid.tsx
web/src/pages/: CompanyPage.tsx  ScreenerPage.tsx
