[project]
name = "screener-etl"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etl*"]
