[project]
name = "screener"
version = "0.1.0"
requires-python = ">=3.9"
# shared/etl runtime deps; the API read layer adds its own async stack below
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# api/ is independently deployable: `pip install -e .[api]`
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "greenlet>=3.0",        # required by SQLAlchemy's async engine
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etl*", "api*"]
